--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,16 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://input_response.tscn", "res://scense/response.tscn", "res://game.tscn")
-current_scene="res://input_response.tscn"
-center_split_offset=-388
+open_scenes=PackedStringArray("res://game.tscn", "res://scense/room.tscn")
+current_scene="res://game.tscn"
+center_split_offset=-203
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/CommandProcessor.gd", "res://game.gd", "res://Input.gd", "res://scripts/input_response.gd"]
-selected_script="res://scripts/input_response.gd"
+open_scripts=["res://scripts/CommandProcessor.gd", "res://game.gd", "res://Input.gd", "res://scripts/input_response.gd", "res://scripts/room.gd"]
+selected_script="res://scripts/CommandProcessor.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
